tests/ui/resolve/issue-101749-2.stderr
error[E0433]: cannot find module or crate `rect` in this scope
  --> $DIR/issue-101749-2.rs:14:13
   |
LL |     let _ = rect::area();
   |             ^^^^ use of unresolved module or unlinked crate `rect`
   |
   = help: you might be missing a crate named `rect`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
